将 Sanity 的富文本编辑器改为 Markdown 编辑器

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "react-icons": "^4.8.0",
+    "react-katex": "^3.0.1",
+    "katex": "^0.16.0",
+    "react-social-media-embed": "^2.3.5",
     "@react-email/body": "^0.0.2",
     "@react-email/button": "^0.0.9",
     "@react-email/column": "^0.0.7",
@@ -54,6 +58,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.1",
+    "easymde": "^2.18.0",
     "edge-cors": "^0.2.1",
     "framer-motion": "^10.12.17",
     "hashids": "^2.3.0",
@@ -76,6 +81,7 @@
     "resend": "^3.2.0",
     "rss": "^1.2.2",
     "sanity": "^3.33.0",
+    "sanity-plugin-markdown": "^5.0.0",
     "sanity-plugin-media": "^2.2.5",
     "valtio": "^1.13.2",
     "zod": "^3.22.4"
