--- a/package.json
+++ b/package.json
@@ -72,10 +72,12 @@
     "react-tweet": "^3.2.0",
     "react-wrap-balancer": "^1.1.0",
     "reading-time": "^1.5.0",
+    "rehype-prism-plus": "^2.0.1",
     "remark-gfm": "^3.0.1",
     "resend": "^3.2.0",
     "rss": "^1.2.2",
     "sanity": "^3.33.0",
+    "sanity-plugin-markdown": "5.1.0",
     "sanity-plugin-media": "^2.2.5",
     "valtio": "^1.13.2",
     "zod": "^3.22.4"
